# evtc-telegram-bot

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  app.py  config.py  deploy.yml  docker-compose.yml  example.env  main.py  pyproject.toml  redis.conf  requirements.txt
.github/images/: bot_description_picture.psd
.github/workflows/: Lint and types.yml  lint and types.yml  lint_and_types.yml  publish.yml
bot/: __main__.py
bot/config/: admin.py  settings.py  values.py
bot/filters/: is_admin.py  is_datetime.py
bot/handlers/: __init__.py  base_commands.py  user_commands.py
bot/keyboards/: card.py  common.py
bot/loggers/: logger.py
bot/middlwares/: throttling.py
bot/states/: card_states.py
bot/templates/: send_card_answer.html
bot/utils/: bot_files.py  commands.py  common.py  smtp.py
bot/validators/: admin.py  card.py
config/: access.usr  admin.py  settings.py
config_data/: access.usr  admin.py  config.py
evtc_bot/: __init__.py  __main__.py  app.py  main.py
evtc_bot/config/: admin.py  settings.py  values.py
evtc_bot/db/: redis.py
evtc_bot/filters/: is_admin.py  is_contact.py  is_datetime.py
evtc_bot/handlers/: __init__.py  base_commands.py  contact_handler.py  user_commands.py
evtc_bot/keyboards/: card.py  common.py
evtc_bot/loggers/: logger.py
evtc_bot/middlwares/: access.py  auth_user.py  check_user.py  common.py  state_contact.py  throttling.py
evtc_bot/routers/: base_commands.py  user_commands.py
evtc_bot/utils/: commands.py  (+3 more)
filters/: is_admin.py  is_contact.py  is_datetime.py
handlers/: base_commands.py  user_commands.py
keyboards/: card.py  common.py  main.py
loggers/: logger.py
media/: znak.psd
routers/: __init__.py  base_commands.py  user_commands.py
states/: card_states.py  states.py  user_states.py
templates/: send_card_answer.html  send_card_answer_inline.html
utils/: bot_files.py  commands.py  common.py  files.py  smtp.py
validators/: admin.py  card.py
(+106 files in other folders)
