[tool.poetry]
name = "evtc-telegram-bot"
version = "0.2.0"
description = "Телеграм чат-бот отправки сведений об эвакуированных автомобилях в Управление Госавтоинспекции"
authors = ["Alexei Malinovskiy <6328673@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.10.0"
pydantic-settings = "^2.3.4"
aiosmtplib = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
