[tool.poetry]
name = "evtc_bot"
version = "2.0.1"
description = "Телеграм чат-бот отправки сведений об эвакуированных автомобилях в Управление Госавтоинспекции"
authors = ["Alexei Malinovskiy <6328673@gmail.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.10.0"
pydantic-settings = "^2.3.4"
aiosmtplib = "^3.0.1"
redis = "^5.0.7"
pydantic = {extras = ["email"], version = "^2.8.2"}
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.5.2"
pyright = "^1.1.371"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
show-fixes = true
line-length = 120
lint.select = ["F", "E", "W", "C90", "I", "N", "S", "B", "A", "ISC", "T20", "Q", "PTH"]
lint.ignore = ["A003"]

[tool.pyright]
reportUnnecessaryTypeIgnoreComment="warning"